PMD cleanup, especially in the filter tests